--- a/365_Portal/Life.Master
+++ b/365_Portal/Life.Master
@@ -22,7 +22,7 @@
     <script src="Asset/js/bootstrap.min.js"></script>
     <script src="Asset/js/all.js"></script>
     <script src="Asset/js/gijgo.min.js"></script>
-    <script src="Asset/js/sweetalert.min.js"></script>
+    <script src="Asset/js/sweetalert2.js"></script>
     <script src="Asset/js/bs-custom-file-input.min.js"></script>
     <script src="Asset/js/select2.min.js"></script>
     <script src="Asset/js/jquery.dataTables.min.js"></script>
@@ -43,6 +43,7 @@
                 </div>
             </div>
         </div>
+
         <div id="sideNav" class="sidenav">
             <a href="<%=Page.ResolveUrl("~/Admin/dashboard.aspx") %>">Dashboard</a>
             <a href="<%=Page.ResolveUrl("~/Admin/Users.aspx") %>">Users</a>
@@ -57,17 +58,26 @@
             <a href="<%=Page.ResolveUrl("~/Admin/assign_topics.aspx") %>">Assign Topics</a>
             <a href="<%=Page.ResolveUrl("~/Achievements.aspx") %>">Achievements</a>
         </div>
-
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-0">
+        
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark p-0">
             <div class="container">
-                <a class="navbar-brand" href="Default.aspx">
+
+                <div class="navbar-left">
+                    <a class="menu" onclick="ToggleNav()"><i class="fas fa-bars fa-lg text-white"></i></a>
+                    <a class="navbar-brand" href="Default.aspx">
+                        <img id="imgCompanyLogo" runat="server" src="../Asset/images/logo.svg" class="logo" />
+                    </a>
+                </div>
+
+
+                <%--<a class="navbar-brand" href="Default.aspx">
                     <img id="imgCompanyLogo" runat="server" src="Asset/images/logo.svg" class="logo" />
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button>
+                </button>--%>
 
-                <div class="collapse navbar-collapse" id="navbarText">
+                <div class="" id="navbarText">
                     <ul class="navbar-nav mr-auto">
                     </ul>
                     <div class="form-inline nav-user">
@@ -98,11 +108,13 @@
                 </div>
             </div>
         </nav>
-
-        <div class="container mt-5 mb-5">
-            <asp:ContentPlaceHolder ID="body" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+        
+        <main class="main-content">
+            <div class="container">
+                <asp:ContentPlaceHolder ID="body" runat="server">
+                </asp:ContentPlaceHolder>
+            </div>
+        </main>
     </form>
 
 </body>
