Gift Design popup

--- a/365_Portal/Asset/css/site.css
+++ b/365_Portal/Asset/css/site.css
@@ -124,6 +124,11 @@ img.logo {
     transform: translate(-50%, -50%);
 }
 
+.note {
+    font-size: 14px;
+    color: #7F7F7F;
+}
+
 .page-card {
     margin: 5.5rem 0;
 }
