--- a/365_Portal/Asset/css/site.css
+++ b/365_Portal/Asset/css/site.css
@@ -917,10 +917,17 @@ p.anchor {
     padding: .25rem .75rem;
 }
 
+.table thead th, .table tbody td {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    max-width: 260px;
+}
+
 
 table tbody td .svg-inline--fa {
     display: inline;
-    margin-right: .25rem;
+    margin-right: .75rem;
     cursor: pointer;
 }
 
